feat: add MIT license and update README with usage examples and options

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "axios": "^1.12.2",
     "css": "^3.0.0",
     "jsdom": "^27.0.0",
-    "pdfkit": "^0.17.2",
-    "puppeteer": "^24.22.3"
+    "pdfkit": "^0.17.2"
   }
 }
