--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "html-to-pdf",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "src/index.js",
+  "types": "index.d.ts",
   "license": "MIT",
   "files": [
-    "index.js",
-    "read-html.js",
-    "obj-pdf.js",
-    "pdf/",
-    "components/",
+    "src/",
+    "index.d.ts",
     "README.md",
     "LICENSE"
   ],
