--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "html-to-pdf",
   "version": "0.1.0",
   "main": "src/index.js",
+  "exports": {
+    ".": {
+      "import": "./index.mjs",
+      "require": "./src/index.js"
+    }
+  },
   "types": "index.d.ts",
   "license": "MIT",
   "files": [
     "src/",
     "index.d.ts",
+    "index.mjs",
     "README.md",
     "LICENSE"
   ],
@@ -16,7 +23,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "css": "^3.0.0",
-    "jsdom": "^27.0.0",
+    "jsdom": "^20.0.0",
     "pdfkit": "^0.17.2"
   }
 }
