--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/index.js",
   "exports": {
     ".": {
+      "types": "./index.d.ts",
       "import": "./index.mjs",
       "require": "./src/index.js"
     }
