fix: update package name to include scope and correct usage in README

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-to-pdf",
+  "name": "@bohard/html-to-pdf",
   "version": "0.1.12",
   "description": "Generate a PDF from HTML using a lightweight HTML/CSS parser and PDFKit.",
   "main": "src/index.js",
