docs: update README and package.json to include glyph coverage and funding information

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "bugs": {
     "url": "https://github.com/BohdanShtelmakh/html-to-pdf/issues"
   },
+  "funding": "https://send.monobank.ua/jar/3WznEHehpC",
   "keywords": [
     "html",
     "pdf",
